--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = --doctest-modules --cov --cov-report term-missing
+addopts = --ignore setup.py --doctest-modules --cov --cov-report term-missing
