--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,4 @@ before_install:
 script:
     - py.test
 after_success:
-    - if [[ $ENV == python=3.4* ]]; then
-          coveralls;
-      fi
+    - coveralls
